--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -210,4 +210,6 @@ h1, h2, h3, h4, h5, h6 { font-family: "Merienda";font-weight: 700 }
     margin: 10px 10px;
 }
 
-
+.pagination-align {
+    margin: 20px 0
+}
