Link dance counter dance items to dance landing pages

--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -43,6 +43,6 @@
 </div>
 
 <div class="row row-buffer">
-    <button id="reset" type="button" class="btn-sm btn-block col-xs-12">Reset</button>
+    <button id="reset" type="button" class="btn btn-sm btn-block col-xs-12">Reset</button>
 </div>
 
