Only show teompo columns on details page that provide additional information

--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -67,9 +67,9 @@
                 <td data-bind="text: Name"></td>
                 <td align="center"><span data-bind="text: Meter.Numerator"></span>/<span data-bind="text: Meter.Denominator"></span></td>
                 <td align="center" data-bind="html: tempoMPM"></td>
-                <td align="center" data-bind="html: tempoDS, visible: $parent.showDetails"></td>
-                <td align="center" data-bind="html: tempoNDCA, visible: $parent.showDetails"></td>
-                <td align="center" data-bind="html: tempoNDCABeginner, visible: $parent.showDetails"></td>
+                <td align="center" data-bind="html: tempoDS, visible: $parent.showDanceSport"></td>
+                <td align="center" data-bind="html: tempoNDCA, visible: $parent.showNDCA_A"></td>
+                <td align="center" data-bind="html: tempoNDCABeginner, visible: $parent.showNDCA_B"></td>
                 <td align="center" data-bind="html: tempoBPM"></td>
                 <td data-bind="text: GroupName"></td>
                 <td data-bind="html: styles"></td>
