--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -64,14 +64,14 @@
         </thead>
         <tbody data-bind="foreach: filteredDances">
             <tr>
-                <td data-bind="text: Name"></td>
+                <td><a data-bind="text: Name, attr: {href: '/Dances/' + Name}"></a></td>
                 <td align="center"><span data-bind="text: Meter.Numerator"></span>/<span data-bind="text: Meter.Denominator"></span></td>
                 <td align="center" data-bind="html: tempoMPM"></td>
                 <td align="center" data-bind="html: tempoDS, visible: $parent.showDanceSport"></td>
                 <td align="center" data-bind="html: tempoNDCA, visible: $parent.showNDCA_A"></td>
                 <td align="center" data-bind="html: tempoNDCABeginner, visible: $parent.showNDCA_B"></td>
                 <td align="center" data-bind="html: tempoBPM"></td>
-                <td data-bind="text: GroupName"></td>
+                <td><a data-bind="text: GroupName, attr: {href: '/Dances/' + GroupName}"></a></td>
                 <td data-bind="html: styles"></td>
             </tr>
         </tbody>
