Do another pass at the home page and fix some bugs encountered along the way.

--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <p>@Html.ActionLink("Browse", "Search", "Song", new { dances = @Model.DanceId }, null) all <b>@Model.SongCount</b> @Model.DanceName songs in the @Html.ActionLink("music4dance's", "Index", "Home") @Html.ActionLink("catalog", "Search", "Song").</p>
+    <p>@Html.ActionLink("Browse", "Search", "Song", new { dances = @Model.DanceId }, null) all <b>@Model.SongCount</b> @Model.DanceName songs in the @Html.ActionLink("music4dance", "Index", "Home") @Html.ActionLink("catalog", "Search", "Song").</p>
 </div>
 
 
