--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -5,12 +5,17 @@
 <div class="row">
     <div class="col-md-4">
         <h1 class="music">Music</h1>
-        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?  Our <a href="/home/dances">dances page</a> is a catalog of music indexed by dance type that will show you a list of songs appropriate for a particular style.  Or go directly to our <a href="/Song">database of songs</a> and browse away.</p>
+        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?</p>
+        <p class="neutral">Our <a href="/dances">dances page</a> is a quick reference for the styles of dance that will link you to a page for each dance including a description, a top ten list, and more.</p>
+        <p class="neutral">Or go directly to our <a href="/Song">database of songs</a> where you can quickly search for a <a href="/Song/Search?SearchString=Aspettami">song</a> or sort a list of songs by attributes like <a href="/Song/Search?dances=SWG&filter=Index-.-Tempo-.-.-.-.-.-.-.">tempo</a> or <a href="/Song/Search?dances=ECS&filter=Index-.-Dances-.-.-.-.-.-.-.">popularity</a>.</p>
+        <p class="neutral">Most of the songs in our <a href="/Song">database</a> are linked to purchase or streaming links for <a href="/Song/AdvancedSearch?services=I">ITunes</a>, <a href="/Song/AdvancedSearch?services=A">Amazon</a>, and <a href="/Song/AdvancedSearch?services=X">Xbox Music</a> so try clicking on the logo of your prefered music source and listen or purchase the music that you've discovered here.</p>
         <p class="neutral">Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
+        <p class="neutral">Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
     </div>
     <div class="col-md-4">
-        <h1 class="tools">Tools</h1>        
+        <h1 class="tools">Tools</h1>
         <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
+        <p class="neutral">Are you curious about how fast quickstep is compared to jive?  Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to?  Use our <a href="/Home/Tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.</p>
         <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.</p>
     </div>
     <div class="col-md-4">
