--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -91,6 +91,9 @@
 
 <div class="row" data-bind="visible: showDetails"> 
     <p>(*) A short explanation of the NDCA (National Dance Council of America) columns: For American style dances the "A" column contains Tempi for Silver and Gold levels while the "B" column contains Tempi for Bronze level.  For International style dances the "A" column contains Tempi for Professional and Amateur couples while the "B" column contains Tempi for Pro/Am couples. </p>
+    <p>Dancesport Tempi are pulled from here: <a href="http://www.worlddancesport.org/Rule/Athlete/Competition">http://www.worlddancesport.org/Rule/Athlete/Competition</a></p>
+    <p>NDCA (National Dance Council of America) Tempi are pulled from here: <a href="http://ndca.org/education/dances-and-tempi/">http://ndca.org/education/dances-and-tempi/</a></p>
+    <p>If there are other organizations that you would like to see included in this list, please <a href="mailto:david@music4dance.net">contact us</a> and we'll be happy to take a look.</p>
 </div>
 
 @section Scripts {
