--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Dances", "Index", "Dance")</li>
+                            <li>@Html.ActionLink("Dances", "Index", "Dances")</li>
                             <li>@Html.ActionLink("Songs", "Index", "Song")</li>
                         </ul>
                     </li>
