--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Dance Styles";
+    ViewBag.Title = "Dance Style Index";
+    ViewBag.Description = "A list of partner dancing styles, including Ballroom, Salsa, Swing, and Tango.";
     ViewBag.ShowTempo = false;
 }
 
