--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Counter";
+    ViewBag.Description = "A web application to measure the tempo of a song and match it with styles of dance.";
 }
 
 @Html.Partial("_Counter")
