--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    ViewBag.Description = "music4dance.net is an online catalog, tools and eductational resources that help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
 }
 
 <div class="row">
