--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Tempi";
+    ViewBag.Description = "A web application that catalogs dance styles by the tempo to which they can be danced both socially and by the standards of several organizers of dance competitions."
 }
 
 <div class="row">
