--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model m4dModels.SongCounts
 
 @{
-    ViewBag.Title = Model.DanceName + " info";
+    ViewBag.Title = Model.DanceName + " Information, Top Ten List, and Resources.";
+    ViewBag.Description = "General informartion about " + Model.DanceName + " along with a top ten list, tempo informstion, and other resources.";
     ViewBag.NoSort = true;
     ViewBag.ShowTempo = true;
     ViewBag.SongFilter = new m4dModels.SongFilter { Dances = @Model.DanceId };
